// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/DataWell Fixed Width Row 1`] = `
<div
  data-css-1s5t7h8=""
>
  <div
    className="psds-datawell psds-datawell.psds-theme--dark"
  >
    <div>
      <span
        className="psds-text__label psds-text__label--size-xsmall psds-text__label--color-secondary psds-theme--dark psds-text__label--strong psds-text__label--caps psds-datawell__label psds-theme--dark"
      >
        Dog count
      </span>
    </div>
    <div
      className="psds-datawell__data psds-theme--dark"
    >
      234,345
    </div>
    <div
      className="psds-datawell__sublabel psds-theme--dark"
    >
      All the doggies
    </div>
  </div>
  <div
    className="psds-datawell psds-datawell.psds-theme--dark"
  >
    <div>
      <span
        className="psds-text__label psds-text__label--size-xsmall psds-text__label--color-secondary psds-theme--dark psds-text__label--strong psds-text__label--caps psds-datawell__label psds-theme--dark"
      >
        Cat count
      </span>
    </div>
    <div
      className="psds-datawell__data psds-theme--dark"
    >
      123
    </div>
    <div
      className="psds-datawell__sublabel psds-theme--dark"
    />
  </div>
  <div
    className="psds-datawell psds-datawell.psds-theme--dark"
  >
    <div>
      <span
        className="psds-text__label psds-text__label--size-xsmall psds-text__label--color-secondary psds-theme--dark psds-text__label--strong psds-text__label--caps psds-datawell__label psds-theme--dark"
      >
        Rafters on the River
      </span>
    </div>
    <div
      className="psds-datawell__data psds-theme--dark"
    >
      1,345/23,235
    </div>
    <div
      className="psds-datawell__sublabel psds-theme--dark"
    />
  </div>
  <div
    className="psds-datawell psds-datawell.psds-theme--dark"
  >
    <div>
      <span
        className="psds-text__label psds-text__label--size-xsmall psds-text__label--color-secondary psds-theme--dark psds-text__label--strong psds-text__label--caps psds-datawell__label psds-theme--dark"
      >
        Flotsam
      </span>
    </div>
    <div
      className="psds-datawell__data psds-theme--dark"
    >
      About 3
    </div>
    <div
      className="psds-datawell__sublabel psds-theme--dark"
    >
      The icky stuff that is not cats or dogs, floating in the river
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/DataWell Row 1`] = `
<div
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    className="psds-datawell psds-datawell.psds-theme--dark"
  >
    <div>
      <span
        className="psds-text__label psds-text__label--size-xsmall psds-text__label--color-secondary psds-theme--dark psds-text__label--strong psds-text__label--caps psds-datawell__label psds-theme--dark"
      >
        Dog count
      </span>
    </div>
    <div
      className="psds-datawell__data psds-theme--dark"
    >
      234,345
    </div>
    <div
      className="psds-datawell__sublabel psds-theme--dark"
    >
      All the doggies
    </div>
  </div>
  <div
    className="psds-datawell psds-datawell.psds-theme--dark"
  >
    <div>
      <span
        className="psds-text__label psds-text__label--size-xsmall psds-text__label--color-secondary psds-theme--dark psds-text__label--strong psds-text__label--caps psds-datawell__label psds-theme--dark"
      >
        Cat count
      </span>
    </div>
    <div
      className="psds-datawell__data psds-theme--dark"
    >
      123
    </div>
    <div
      className="psds-datawell__sublabel psds-theme--dark"
    />
  </div>
  <div
    className="psds-datawell psds-datawell.psds-theme--dark"
  >
    <div>
      <span
        className="psds-text__label psds-text__label--size-xsmall psds-text__label--color-secondary psds-theme--dark psds-text__label--strong psds-text__label--caps psds-datawell__label psds-theme--dark"
      >
        Rafters on the River
      </span>
    </div>
    <div
      className="psds-datawell__data psds-theme--dark"
    >
      1,345/23,235
    </div>
    <div
      className="psds-datawell__sublabel psds-theme--dark"
    />
  </div>
  <div
    className="psds-datawell psds-datawell.psds-theme--dark"
  >
    <div>
      <span
        className="psds-text__label psds-text__label--size-xsmall psds-text__label--color-secondary psds-theme--dark psds-text__label--strong psds-text__label--caps psds-datawell__label psds-theme--dark"
      >
        Flotsam
      </span>
    </div>
    <div
      className="psds-datawell__data psds-theme--dark"
    >
      About 3
    </div>
    <div
      className="psds-datawell__sublabel psds-theme--dark"
    >
      The icky stuff that is not cats or dogs, floating in the river
    </div>
  </div>
</div>
`;
